add tool locations

--- a/config.yaml
+++ b/config.yaml
@@ -4,24 +4,25 @@
 
 # GTF file for genome build ensembl 90 
 gtf_file:
-  /home/groups/CEDAR/tools/cfRNA_resources/gencode.v27.annotation.gtf
+  /home/groups/CEDAR/callahro/cfrna_references/ensembl_109/gencode.v43.chr_patch_hapl_scaff.annotation.gtf
 TE_gtf:
   /home/groups/CEDAR/tools/cfRNA_resources/te_rmsk_thisisatestpath.gtf
 
 #prebuilt star index
 star_index:
-  /home/groups/CEDAR/roskamsh/tools/cfRNA_star_index
+  /home/groups/CEDAR/callahro/cfrna_references/ensembl_109/STAR_index
 
 #genome location
 genome:
-  /home/groups/CEDAR/tools/cfRNA_resources/GRCh38.primary_assembly.genome.fa
+  /home/groups/CEDAR/callahro/cfrna_references/ensembl_109/GRCh38.p13.genome.fa
+
 
 ####################################################################
 # TOOLS 
 ####################################################################
 #star tool location
 star_tool:
-  /home/exacloud/lustre1/CEDAR/tools/STAR/tags/2.5.3a/bin/Linux_x86_64/STAR
+  /home/groups/CEDAR/tools/STAR/tags/2.5.3a/bin/Linux_x86_64/STAR
 
 #picart tool location
 picard_tool:
