--- a/profile/config.yaml
+++ b/profile/config.yaml
@@ -1,7 +1,8 @@
-cluster: "sbatch --cpus-per-task {threads} --time=24:00:00 --mem={resources.mem_mb} --job-name=smk-{rule}-{wildcards}"
-
+cluster: "sbatch --cpus-per-task {threads} --time=24:00:00 --mem={resources.mem_mb} --job-name=smk-{rule}-%j --output=smk-{rule}-%j"
+## you can use {wildcards.sample} but this will fail withe xpanded rules
 default-resources:
   - mem_mb=3000
+  - threads=1
 
 #^^This is one of the most important parts of the snakemake pipeline
 ##This is formatted in the exact same way that all other shell commands are formatted in snakemake
