--- a/profile/config.yaml
+++ b/profile/config.yaml
@@ -1,7 +1,7 @@
 cluster: "sbatch --cpus-per-task {threads} --time=24:00:00 --mem={resources.mem_mb} --job-name=smk-{rule}-%j --output=smk-{rule}-%j"
 ## you can use {wildcards.sample} but this will fail withe xpanded rules
 default-resources:
-  - mem_mb=3000
+  - mem_mb=6000
   - threads=1
 
 #^^This is one of the most important parts of the snakemake pipeline
@@ -16,6 +16,8 @@ default-resources:
 ##The commands below will be submitted when you run snakemake in the same way as if you had submitted 
 ##them as options. For example writing jobs: 20 here is the same as specifying --jobs 20 on the command line
 #
-jobs: 50 #never have more than 20 jobs running at the same time
+jobs: 150 #never have more than 20 jobs running at the same time
 latency-wait: 60 #wait at least 60 seconds after a job has finished for the files to "show up" in case of file system latency
+restart-times: 2
+
 #
